fix date range picker overflow

--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -191,3 +191,15 @@ a{
 .el-select-dropdown{
     z-index: 2051!important;
 }
+.el-date-range-picker__content{
+    float: none;
+    width: 100%;
+}
+.el-picker-panel{
+    width: 100vw;
+    min-width: 0;
+    margin-top: 0!important;
+    left: 0!important;
+    top: 0!important;
+    border-radius: 0;
+}
